# case-3-mini-project

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
app/: llm_service.py  main.py  models.py
